name:               coroutine-frp
version:            0.1.0.0
synopsis:           FRP using coroutines
description:        A minimalistic reactive programming library based on coroutines for fixed time-step interactive simulations.
license:            MIT
license-file:       LICENSE
author:             Sami Hangaslammi
maintainer:         Sami Hangaslammi <shang@iki.fi>
category:           Reactivity
build-type:         Simple
cabal-version:      >=1.8

source-repository:  git://github.com/shangaslammi/coroutine-frp.git
homepage:           https://github.com/shangaslammi/coroutine-frp


library
    ghc-options:        -O2
    hs-source-dirs:     src
    exposed-modules:    Control.Coroutine, Control.Coroutine.FRP, Control.Coroutine.FRP.Collections
    build-depends:      base >= 4, transformers >= 0.2.2.0, containers >= 0.4.2.0

