name:               coroutine-frp
version:            0.2.0.0
synopsis:           FRP using coroutines
description:        A minimalistic reactive programming library based on coroutines for fixed time-step interactive simulations.
license:            MIT
license-file:       LICENSE
author:             Sami Hangaslammi
maintainer:         Sami Hangaslammi <shang@iki.fi>
category:           Reactivity
build-type:         Simple
cabal-version:      >=1.8
homepage:           https://github.com/shangaslammi/coroutine-frp

source-repository head
    type:     git
    location: git://github.com/shangaslammi/coroutine-frp.git

source-repository this
    type:     git
    location: git://github.com/shangaslammi/coroutine-frp.git
    tag:      v0.1.0.0

library
    ghc-options:        -O2 -Wall
    hs-source-dirs:     src
    exposed-modules:    Control.Coroutine, Control.Coroutine.FRP, Control.Coroutine.FRP.Collections
    build-depends:      base, transformers, containers

